--- a/web1/src/app/company-payment/payment/payment.component.html
+++ b/web1/src/app/company-payment/payment/payment.component.html
@@ -107,11 +107,26 @@
                                         <mat-label>Payment Mode</mat-label>
                                         <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
                                             #GSTTypecontrol1>
-                                            <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}}
+                                            <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList" (click)="paymodeCash()"> {{p.Name}}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
+
+                                <div *ngIf="data.PaymentType !== 'Customer' && data.PaymentMode?.toUpperCase() === 'CASH'"
+                                class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0 ">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>Cash Type</mat-label>
+                                    <mat-select name="Duration" [(ngModel)]="data.CashType" required>
+                                        <mat-option value="CashCounter">Cash Counter <b style="float: right; color: red;"> {{this.CashCounterBalance}}</b></mat-option>
+                                        <mat-option value="PettyCash">Petty Cash <b style="float: right; color: red;">{{this.PettyCashBalance}} </b> </mat-option>
+                                    </mat-select>
+                                    <mat-error>
+                                        CashType is required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+
                                 <div *ngIf="data.ApplyReturn"  class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Mode</mat-label>
