--- a/web1/src/app/sale/bill/bill.component.css
+++ b/web1/src/app/sale/bill/bill.component.css
@@ -306,7 +306,17 @@ button:disabled.whatsappfBill {
     border-radius: 5px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1300px) {
+@media screen and (min-width: 1099px) and (max-width: 1300px) {
+    .card {
+        zoom: 70% !important
+    }
+}
+@media screen and (min-width: 992px) and (max-width: 1099px) {
+    .card {
+        zoom: 80% !important
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
     .card {
         zoom: 70% !important
     }
