--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -709,7 +709,7 @@
                                                             </mat-form-field>
                                                         </div>
                                                         <div *ngIf="!showDoctorAdd" class="col-md-1 col-2 b-0">
-                                                            <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="Example icon button with a bookmark icon">
+                                                            <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="dropdown search">
                                                             <mat-icon>add</mat-icon>
                                                         </button>
                                                         </div>
@@ -1264,7 +1264,7 @@
                                                         </mat-form-field>
                                                     </div>
                                                     <div *ngIf="!showDoctorAdd" class="col-md-1 col-2 b-0">
-                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="Example icon button with a bookmark icon">
+                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="dropdown search">
                                                             <mat-icon>add</mat-icon>
                                                     </button>
                                                     </div>
@@ -1544,7 +1544,7 @@
                                                         </mat-form-field>
                                                     </div>
                                                     <div *ngIf="!showDoctorAdd" class="col-md-1 col-2 b-0">
-                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="Example icon button with a bookmark icon">
+                                                        <button mat-mini-fab color="primary" [routerLink]="['/sale/doctor',0]" [queryParams]="{ check: 1}"  aria-label="dropdown search">
                                                             <mat-icon>add</mat-icon>
                                                     </button>
                                                     </div>
