--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -13,27 +13,64 @@
 <style>
 
     html body {
-        /* zoom: 95%; */
-        zoom: 90%;
+       /* zoom: 95%; */
+        zoom: 95%;
     }
 </style>
-
-
 <body>
-    <% if (Array.isArray(data)) { %>
-        <% data.forEach(function (i, index) { %>
-            <% if (data.CompanyBarcode == 5) { %>
-                <% if (data.CompanyID == 20 || data.CompanyID == 19 && data.CompanyID !== 64 && data.CompanyID !== 163) { %>
-                    <table style="margin-left: -10px; margin-top: -9px; zoom: 80% !important;">
+    <% if(data.length !==0){ data.forEach(function (i, index) { %>
+        <% if (data.CompanyBarcode == 5 ){%>
+            <% if (data.CompanyID == 20 || data.CompanyID == 19 && data.CompanyID != 64){%>
+                <table style="margin-left: -10px; margin-top: -9px; zoom: 95%;">
+                    <tr>
+                        <th style="width: 200px; padding: 0; ">
+                            <div
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                               
+                            </div>
+                            <div style=" margin-top: 2px;">
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="53" jsbarcode-marginTop="5"
+                                    jsbarcode-fontSize="20" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+                        </th>
+                        <th  style="width: 350px;">
+                            <div
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 130px; width: 200px">
+                                <%=i.ProductBrandName%>
+                            </div>
+                            <div
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 130px;">
+                                <%=i.ProductModelName%>
+                            </div>
+ 				 <div
+                                style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 130px;">
+                                     
+                                                AED  <%=i.RetailPrice%>    
+                                              
+                                     
+                            </div>
+                        </th>
+                    </tr>
+                </table>
+                 <%}%>
+
+<% if (data.CompanyID == 64 && data.CompanyID != 20 && data.CompanyID != 19){%> 
+                <table style="margin-left: -10px; margin-top: -9px; zoom:95%;">
                         <tr>
-                            <th  style="width: 140px; padding: 0;">
+                            <th  style="width: 280px; padding: 0;">
                                 <div
                                     style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                                     <%=i.BarcodeName%>
                                 </div>
                                 <div>
                                     <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
-                                        jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                        jsbarcode-textmargin="0" jsbarcode-height="55" jsbarcode-marginTop="-15"
                                         jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
                                         jsbarcode-fontoptions="bold">
                                     </svg>
@@ -42,47 +79,193 @@
                                     </script>
                                 </div>
                             </th>
-                            <th  style="width: 200px;">
-                               
-                                <div 
-                                    style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
-                                    <% if (data.MRPHide == 'true' ){%>
-                                    <% if (data.CompanyID !== 2){%>
-                                               MRP  <%=i.RetailPrice%>    
-                                      <%}%>
-                                    <% if (data.CompanyID == 2){%>
-                                               OMR  <%=i.RetailPrice%>    
-                                      <%}%>    
-                                      <%}%>         
-                                </div>
-                               
+                            <th  style="width:550px;  padding: 0 !important; margin: 0 !important;zoom:95%; ">
                                 <div
-                                    style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
-                                    (Inc. of all Taxes) 
+                                    style="text-align: left; margin-left: 150px;">
+                                           <b style="font-size: 18px; font-weight: 600; font-family: verdana; letter-spacing: 0px;">    MRP  <%=i.RetailPrice%> </b>   
                                 </div>
-                                
-                                <div style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
-                                    <% if (data.CompanyID !== 63 && data.CompanyID !== 153){%>
-                                         <%=i.ProductBrandName%>
-                                    <%}%>
-                                    <% if (data.CompanyID === 63 || data.CompanyID === 153){%>
-                                        <%=i.ProductUniqueBarcode%>
-                                    <%}%>
-                                </div>
-        
                                 <div
-                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                                    style="text-align: left; font-size: 12px; font-weight: 600;letter-spacing: 0.1px;margin-left: 150px; font-family: verdana ;">
+                                    (Inc. of all Taxes) </div>
+                                <div
+                                    style="text-align: left; font-size: 14px; font-weight: 600; font-family: verdana;margin-left: 150px;">
+                                    <%=i.ProductBrandName%>
+                                </div>
+                                <div
+                                    style="text-align: left; font-size: 14px; font-weight: 600; font-family: verdana;margin-left: 150px;">
                                     <%=i.ProductModelName%>
                                 </div>
                             </th>
                         </tr>
                     </table>
-                <% } %>
-            <% } %>
-        <% }); %>
-    <% } else { %>
-        <p>No data available</p>
-    <% } %>
+                    <%}%>
+                 <% if (data.CompanyID != 20 && data.CompanyID != 19 && data.CompanyID != 64 && data.CompanyID !== 193 && data.CompanyID !== 216 && data.CompanyID !== 218) {%> 
+
+            <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
+ 
+                <tr>
+                    <th  style="width: 140px; padding: 0;">
+                        <div
+                            style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                            <%=i.BarcodeName%>
+                        </div>
+                        <div>
+                            <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                jsbarcode-fontoptions="bold">
+                            </svg>
+                            <script>
+                                JsBarcode(".barcode").init();
+                            </script>
+                        </div>
+                    </th>
+                    <th  style="width: 220px;">
+<% if (data.MRPHide == 'true'){%>
+                        <div
+                            style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                            <% if (data.CompanyID != 2){%>
+                                       MRP  <%=i.RetailPrice%>    
+                              <%}%>
+                            <% if (data.CompanyID == 2){%>
+                                       OMR  <%=i.RetailPrice%>    
+                              <%}%>            
+                        </div>
+ <%}%> 
+                        <div
+                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
+                              <% if (data.CompanyID !== 2){%>
+                                (Inc. of all Taxes) 
+                      		 <%}%>
+			 </div>
+                        <div
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                              <% if (data.CompanyID !== 63 && data.CompanyID !== 153){%>
+                                 <%=i.ProductBrandName%>
+                            <%}%>
+                            <% if (data.CompanyID === 63 || data.CompanyID == 153){%>
+                                <%=i.ProductUniqueBarcode%>
+                            <%}%>
+                        </div>
+                        <div
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                            <%=i.ProductModelName%>
+                        </div>
+                    </th>
+                </tr>
+            </table>
+            <%}%>
+   <% if (data.CompanyID == 193){%> 
+                <table style="margin-left: -10px; margin-top: -9px; width:100%;">
+                 <tr>
+                        <th  style="width: 250px; padding: 0;width:100%;zoom:74%">
+                            <div
+                                style="font-size: 18px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                <%=i.BarcodeName%>
+                            </div>
+
+                            <div>
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                    jsbarcode-fontSize="18" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+
+                            <div style="text-align: center; font-size: 12px; font-weight: 600; font-family: verdana;">
+                                <%=i.ProductFullName%>
+                           </div>
+
+                            <div style="text-align: center; font-size: 20px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
+                            <% if (data.MRPHide == 'true' ){%>
+                                MRP  <%=i.RetailPrice%>  
+                              <%}%>         
+                        </div>
+                       
+                        </th>
+                      
+                    </tr>
+               
+                     
+               
+                </table>
+                <%}%>
+
+  <% if (data.CompanyID == 216){%> 
+                <table style="margin-left: -2px; margin-top: -9px; width:100%;zoom:95%;text-align: center;">
+                 <tr>
+                        <th  style=" padding: 0;width:100%;zoom:80%">
+                            <div
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                <%=i.BarcodeName%>
+                            </div>
+
+                            <div>
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                    jsbarcode-fontSize="18" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+
+                            <div style="text-align: center; font-size: 10px; font-weight: 600; font-family: verdana;  height: 21px; margin-top: -8px;">
+                                <%=i.ProductFullName%>
+                           </div>
+
+                            <div style="text-align: center; font-size: 20px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
+                            <% if (data.MRPHide == 'true' ){%>
+                                OMR  <%=i.WholeSalePrice%>  
+                              <%}%>         
+                        </div>
+                       
+                        </th>
+                      
+                    </tr>
+                </table>
+                <%}%>
+
+                <% if (data.CompanyID == 218){%> 
+                    <table style="margin-left: -2px; margin-top: -9px; width:100%;zoom:100%;text-align: center;">
+                     <tr>
+                            <th  style=" padding: 0;width:100%;zoom:80%">
+                                <div
+                                    style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                    <%=i.BarcodeName%>
+                                </div>
     
+                                <div>
+                                    <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                        jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                        jsbarcode-fontSize="16" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                        jsbarcode-fontoptions="bold">
+                                    </svg>
+                                    <script>
+                                        JsBarcode(".barcode").init();
+                                    </script>
+                                </div>
+    
+                                <div style="text-align: center; font-size: 10px; font-weight: 600; font-family: verdana; height: 27px; margin-top: -7px;">
+                                    <%=i.ProductFullName%>
+                               </div>
+    
+                                <div style="text-align: center; font-size: 18px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
+                                <% if (data.MRPHide == 'true' ){%>
+                                    MRP  <%=i.RetailPrice%>  
+                                  <%}%>         
+                            </div>
+                           
+                            </th>
+                          
+                        </tr>
+                    </table>
+                    <%}%>
+            <%}%>
+                <%})}%>
 </body>
 </html>
