--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
@@ -97,3 +97,33 @@ input::-webkit-inner-spin-button {
     width: 30px;
     border-radius: 3px
 }
+
+/* product-quantity-grid.component.css */
+.settings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .settings > div {
+    margin-bottom: 10px;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  table {
+    width: 100%;
+    margin-bottom: 0px;
+  }
+  
+  input[type="number"] {
+    width: 100%;
+    text-align: center;
+  }
+  
+  
