--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -63,7 +63,7 @@
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>ActionType</mat-label>
                                                     <mat-select name="reportType" placeholder="Select Payee Type"
-                                                        required [(ngModel)]="data.UserType"
+                                                        required [(ngModel)]="data.UserType" (selectionChange)="getPayeeList()"
                                                         appAutoFoucsDirectives >
                                                         <mat-option value="Employee">CashBox(PettyCash)</mat-option>
                                                         <mat-option value="Employee">Expense</mat-option>
@@ -79,9 +79,7 @@
                                             <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>User Name</mat-label>
-                                                    <mat-select name="PayeeID" [(ngModel)]=" data.UserID"
-                                                        required >
-
+                                                    <mat-select name="PayeeID" [(ngModel)]=" data.UserID" required>
                                                         <mat-option [value]="s.ID" *ngFor="let s of payeeList  ">
                                                             {{s.Name}}
                                                             <span style="float: right;">{{s.MobileNo1}}</span>
@@ -89,6 +87,8 @@
                                                     </mat-select>
                                                     <mat-error>Payee is required</mat-error>
                                                 </mat-form-field>
+
+                                            
                                             </div>
                                       
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
@@ -115,7 +115,7 @@
                                             </div>
                                             <div class="col-xl-3 col-lg-3 col-md-6 col-12 mb-0 ">
                                                 <button [disabled]="!f1.valid" type="submit" mat-raised-button
-                                                    color="primary" >
+                                                    color="primary" (click)=" pettyCashReport()">
                                                     Search
                                                 </button>
                                                 <button type="button" 
@@ -128,16 +128,67 @@
                                     </form>
                                     <!--  list -->
                                     <div class="body p-2">
-                                        <div id="loyality-content" class="col-sm-12"
+                                        <div id="petty-content" class="col-sm-12"
                                             style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
-                                                style="border: 2px solid #fff !important;" id="loyalityExcel">
+                                                style="border: 2px solid #fff !important;" id="pettyExcel">
                                                 <thead>
-                                                   <tr></tr>
-                                                     
+                                                   <tr>
+                                                    <th>Sno.</th>
+                                                    <th>ActionType</th>
+                                                    <th>CashType</th>
+                                                    <th>Comments</th>
+                                                    <th>CreatedBy</th>
+                                                    <th>CreatedOn</th>
+                                                    <th>CreditType</th>
+                                                    <th>DepositAmount</th>
+                                                    <th>InvoiceNo</th>
+                                                    <th>NAME</th>
+                                                    <th>ShopName</th>
+                                                    <th>TotalAmount</th>
+                                                    <th>WithdrawalAmount</th>
+                                                   </tr>
+                                                   <tr class="totolRow " *ngIf="this.dataList != null && this.dataList != ''" >
+                                                    <td>
+                                                        <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                            aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
+                                                            <button class="bg_none ms-2 me-2" (click)="print()" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
+
+                                                    </td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
                                                 </thead>
                                                 <tbody class="text-center">
-                                                    <tr></tr>
+                                                    <tr *ngFor="let data of dataList; let i = index" text="left">
+                                                        <td>{{ i + 1 }}</td>
+                                                        <td>{{data.ActionType}}</td>
+                                                        <td>{{data.CashType}}</td>
+                                                        <td>{{data.Comments}}</td>
+                                                        <td>{{data.CreatedBy}}</td>
+                                                        <td>{{dateFormat(data.CreatedOn)}}</td>
+                                                        <td>{{data.CreditType}}</td>
+                                                        <td>{{data.DepositAmount}}</td>
+                                                        <td>{{data.InvoiceNo}}</td>
+                                                        <td>{{data.NAME}}</td>
+                                                        <td>{{data.ShopName}}</td>
+                                                        <td>{{data.TotalAmount}}</td>
+                                                        <td>{{data.WithdrawalAmount}}</td>
+
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
