--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -79,7 +79,7 @@
                                             <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>User Name</mat-label>
-                                                    <mat-select name="PayeeID" [(ngModel)]=" data.UserID" required>
+                                                    <mat-select name="PayeeID" [(ngModel)]=" data.UserID">
                                                         <mat-option [value]="s.ID" *ngFor="let s of payeeList  ">
                                                             {{s.Name}}
                                                             <span style="float: right;">{{s.MobileNo1}}</span>
@@ -135,18 +135,18 @@
                                                 <thead>
                                                    <tr>
                                                     <th>Sno.</th>
-                                                    <th>ActionType</th>
+                                                    <th>NAME</th>
+                                                    <th>InvoiceNo</th>
                                                     <th>CashType</th>
-                                                    <th>Comments</th>
-                                                    <th>CreatedBy</th>
-                                                    <th>CreatedOn</th>
                                                     <th>CreditType</th>
                                                     <th>DepositAmount</th>
-                                                    <th>InvoiceNo</th>
-                                                    <th>NAME</th>
-                                                    <th>ShopName</th>
-                                                    <th>TotalAmount</th>
                                                     <th>WithdrawalAmount</th>
+                                                    <th>TotalAmount</th>
+                                                    <th>ShopName</th>
+                                                    <th>Comments</th>
+                                                    <th>ActionType</th>
+                                                    <th>CreatedBy</th>
+                                                    <th>CreatedOn</th>
                                                    </tr>
                                                    <tr class="totolRow " *ngIf="this.dataList != null && this.dataList != ''" >
                                                     <td>
@@ -175,18 +175,18 @@
                                                 <tbody class="text-center">
                                                     <tr *ngFor="let data of dataList; let i = index" text="left">
                                                         <td>{{ i + 1 }}</td>
-                                                        <td>{{data.ActionType}}</td>
+                                                        <td>{{data.NAME}}</td>
+                                                        <td>{{data.InvoiceNo}}</td>
                                                         <td>{{data.CashType}}</td>
-                                                        <td>{{data.Comments}}</td>
-                                                        <td>{{data.CreatedBy}}</td>
-                                                        <td>{{dateFormat(data.CreatedOn)}}</td>
                                                         <td>{{data.CreditType}}</td>
                                                         <td>{{data.DepositAmount}}</td>
-                                                        <td>{{data.InvoiceNo}}</td>
-                                                        <td>{{data.NAME}}</td>
-                                                        <td>{{data.ShopName}}</td>
-                                                        <td>{{data.TotalAmount}}</td>
                                                         <td>{{data.WithdrawalAmount}}</td>
+                                                        <td>{{data.TotalAmount}}</td>
+                                                        <td>{{data.ShopName}}</td>
+                                                        <td>{{data.Comments}}</td>
+                                                        <td>{{data.ActionType}}</td>
+                                                        <td>{{data.CreatedBy}}</td>
+                                                        <td>{{dateFormat(data.CreatedOn)}}</td>
 
                                                     </tr>
                                                 </tbody>
