--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -164,9 +164,9 @@
                                                     <td></td>
                                                     <td></td>
                                                     <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
+                                                    <td>{{this.calculation[0].DepositAmount ? this.calculation[0].DepositAmount : 0}}</td>
+                                                    <td>{{this.calculation[0].WithdrawalAmount ? this.calculation[0].WithdrawalAmount : 0}}</td>
+                                                    <td>{{this.calculation[0].TotalAmount ? this.calculation[0].TotalAmount : 0}}</td>
                                                     <td></td>
                                                     <td></td>
                                                     <td></td>
