--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -932,19 +932,79 @@
                       <ng-container *ngFor="let sph of sphValues" [matColumnDef]="sph">
                         <th mat-header-cell *matHeaderCellDef style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid;"> {{sph}} </th>
                         <td mat-cell *matCellDef="let element" style="font-size: 16px;color: rgb(0 0 0); border: 1px solid;">
-                          <input type="number" [(ngModel)]="element[sph]" min="0" />
+                          <input type="number" [(ngModel)]="element[sph]" min="0" (change)="qtyAdd(sph, element.cyl,element[sph])"/>
                         </td>
                       </ng-container>
                   
                       <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: 0px; "></tr>
                       <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="height: 0px;"></tr>
                     </table>
-                    <button mat-raised-button (click)="purchase()">Purchase</button>
-                    <p>Total qty: {{totalQty}}</p>
+
+
+                  
                   </div>
                   
 
             </div>
+
+             <div class="row mt-5">
+
+                 
+
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Purchase Price</mat-label>
+                        <input matInput name = "purchasePrice" [(ngModel)]="lens.purchasePrice" #purchasePricecontrol [autocomplete]="false">
+                        <mat-error>
+                            Total Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>qty</mat-label>
+                        <input matInput name = "quantity" [(ngModel)]="lens.quantity"  #quantitycontrol [autocomplete]="false">
+                        <mat-error>
+                            Total Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Gst%</mat-label>
+                        <input matInput  name = "GSTPercent" [(ngModel)]="lens.GSTPercent" #GSTPercentcontrol [autocomplete]="false">
+                        <mat-error>
+                            Total Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Gst Type</mat-label>
+                        <input matInput name = "GSTtype" [(ngModel)]="lens.GSTtype" #GSTtypecontrol [autocomplete]="false">
+                        <mat-error>
+                            Total Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Retail Price</mat-label>
+                        <input matInput name = "retailPrice" [(ngModel)]="lens.retailPrice" #retailPricecontrol [autocomplete]="false">
+                        <mat-error>
+                            Total Amount is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <button mat-raised-button (click)="purchase()">Purchase</button>
+                </div>
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                    <p>Total qty: {{totalQty}}</p>
+                </div>
+               
+            </div>  
+            
         </div>
     </div>
 </ng-template>
